<resources>
    <string name="app_name">垃圾分类</string>
    <string name="text_open_skip" translatable="false">跳过</string>
    <string name="text_login_account" translatable="false">账号</string>
    <string name="text_login_account_hint" translatable="false">请输入账号</string>
    <string name="text_login_password" translatable="false">密码</string>
    <string name="text_login_password_hint" translatable="false">请输入密码</string>
    <string name="text_login_register" translatable="false">注册</string>
    <string name="text_login_login" translatable="false">登录</string>
    <string name="text_login_title" translatable="false">登录</string>
    <string name="text_login_wrong" translatable="false">密码错误</string>
    <string name="text_login_nonexistence" translatable="false">账号不存在</string>
    <string name="text_register_title" translatable="false">注册</string>
    <string name="text_register_account" translatable="false">账号</string>
    <string name="text_register_account_hint" translatable="false">请输入账号</string>
    <string name="text_register_nickname" translatable="false">昵称</string>
    <string name="text_register_nickname_hint" translatable="false">请输入昵称</string>
    <string name="text_register_man" translatable="false">男</string>
    <string name="text_register_woman" translatable="false">女</string>
    <string name="text_register_mobile" translatable="false">手机号</string>
    <string name="text_register_mobile_hint" translatable="false">请输入手机号</string>
    <string name="text_register_address" translatable="false">地址</string>
    <string name="text_register_address_hint" translatable="false">请输入地址</string>
    <string name="text_register_password" translatable="false">密码</string>
    <string name="text_register_password_hint" translatable="false">请输入密码</string>
    <string name="text_register_confirm" translatable="false">确认</string>
    <string name="text_register_confirm_hint" translatable="false">请输入确认密码</string>
    <string name="text_register_login" translatable="false">返回登录</string>
    <string name="text_register_register" translatable="false">注册</string>
    <string name="text_register_sex" translatable="false">性别</string>
    <string name="text_register_avatar_hint" translatable="false">请上传头像</string>
    <string name="text_register_differ" translatable="false">密码不一致</string>
    <string name="text_register_successful" translatable="false">注册成功</string>
    <string name="text_register_exists" translatable="false">改账号已存在</string>
    <string name="text_main_home" translatable="false">主页</string>
    <string name="text_main_my" translatable="false">我的</string>
    <string name="text_main_exit" translatable="false">再点击一次退出应用程序</string>
    <string name="text_home_name_hint" translatable="false">请输入垃圾名称</string>
    <string name="text_home_wet_garbage" translatable="false">湿垃圾</string>
    <string name="text_home_dry_refuse" translatable="false">干垃圾</string>
    <string name="text_home_recyclables" translatable="false">可收垃圾</string>
    <string name="text_home_harmful" translatable="false">有害垃圾</string>
    <string name="text_home_no_data" translatable="false">暂无数据</string>
    <string name="text_home_loading" translatable="false">加载中...</string>
    <string name="text_home_succeed" translatable="false">识别成功</string>
    <string name="text_home_failed" translatable="false">识别失败，上传图像可能太大</string>
    <string name="text_my_personal" translatable="false">个人信息</string>
    <string name="text_my_security" translatable="false">账号安全</string>
    <string name="text_my_language" translatable="false">语言设置</string>
    <string name="text_my_about" translatable="false">关于</string>
    <string name="text_my_logout" translatable="false">退出登录</string>
    <string name="text_my_exit" translatable="false">退出应用</string>
    <string name="text_personal_title" translatable="false">个人信息</string>
    <string name="text_personal_account" translatable="false">账号</string>
    <string name="text_personal_nickname" translatable="false">昵称</string>
    <string name="text_personal_nickname_hint" translatable="false">请输入昵称</string>
    <string name="text_personal_sex" translatable="false">性别</string>
    <string name="text_personal_man" translatable="false">男</string>
    <string name="text_personal_woman" translatable="false">女</string>
    <string name="text_personal_mobile" translatable="false">手机号</string>
    <string name="text_personal_mobile_hint" translatable="false">请输入手机号</string>
    <string name="text_personal_address" translatable="false">地址</string>
    <string name="text_personal_address_hint" translatable="false">请输入地址</string>
    <string name="text_personal_save" translatable="false">保存</string>
    <string name="text_personal_success" translatable="false">修改成功</string>
    <string name="text_password_title" translatable="false">更改密码</string>
    <string name="text_password_new_password" translatable="false">新密码</string>
    <string name="text_password_new_password_hint" translatable="false">请输入新密码</string>
    <string name="text_password_save" translatable="false">保存</string>
    <string name="text_language_title" translatable="false">语言设置</string>
    <string name="text_language_save" translatable="false">保存</string>
    <string name="text_about_title" translatable="false">关于</string>
    <string name="text_garbage_detail_title" translatable="false">垃圾明细</string>
    <string name="text_garbage_add_title" translatable="false">添加垃圾</string>
    <string name="text_garbage_name" translatable="false">名称</string>
    <string name="text_garbage_name_hint" translatable="false">请输入名称</string>
    <string name="text_garbage_classify" translatable="false">分类</string>
    <string name="text_garbage_content" translatable="false">内容</string>
    <string name="text_garbage_content_hint" translatable="false">请输入内容</string>
    <string name="text_garbage_save" translatable="false">保存</string>
    <string name="text_garbage_modify_title" translatable="false">修改垃圾</string>
    <string name="text_garbage_add_success" translatable="false">添加成功</string>
    <string name="text_garbage_update_success" translatable="false">修改成功</string>
    <string name="text_exit_hint" translatable="false">欢迎下次继续使用</string>
</resources>