<?xml version="1.0" encoding="utf-8"?>
<!--线性布局  LinearLayout 根布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_title"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />
    </LinearLayout>
    <!--表单布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="703dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:src="@drawable/ic_e" />
        <!--账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">
            <!--TextView 文本  html的p标签-->

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="start"
                android:text="@string/text_login_account"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#ffffff"
                android:hint="@string/text_login_account_hint"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/text_login_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/text_login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="382dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="120dp"
                android:background="@drawable/btn_border_fill"
                android:text="@string/text_login_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="68dp"
                android:background="@drawable/bg_round_white"
                android:text="@string/text_login_register"
                android:textColor="#BCC595"
                android:textSize="24sp" />

        </RelativeLayout>

        <!--登录按钮-->

    </LinearLayout>

</LinearLayout>