<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:onClick="back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_garbage_add_title"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />
    </RelativeLayout>
    <!--表单布局-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <!--账号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/text_garbage_name"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:hint="@string/text_garbage_name_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/text_garbage_classify"
                    android:textSize="14dp" />

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="452dp"
                android:background="@drawable/bg_border_bottom"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/text_garbage_content"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/text_garbage_content_hint"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14dp" />
            </LinearLayout>
            <!--注册按钮-->
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_border_fill"
        android:onClick="save"
        android:text="@string/text_garbage_save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="22dp" />

</LinearLayout>